# autonomous-research-agent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
examples/: sample_report.md
src/research_agent/: __init__.py  __main__.py  cli.py  exporters.py  fetch.py  llm.py  memory.py  models.py  pipeline.py  prompts.py  search.py  utils.py
tests/: test_cli.py  test_exporters.py  test_memory.py  test_pipeline.py  test_utils.py
