[project]
name = "autonomous-research-agent"
version = "0.1.0"
description = "Assessment Option 1: Autonomous Research Agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.40.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.3",
    "trafilatura>=1.9.0",
    "python-dotenv>=1.0.1",
    "reportlab>=4.2.0",
]

[project.scripts]
research-agent = "research_agent.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

